--- a/Project/inner/index.html
+++ b/Project/inner/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Task number one</h1>
         <p> <i>Task</i> <b>NUMBER ONE</b> </p>    
-            <img src="project/img/grayapple.png">
+            <img src="loft-project/img/grayapple.png">
                 <img src="../img/blackapple.png"
 
 </body>
