--- a/Project/inner/index.html
+++ b/Project/inner/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Task number one</h1>
         <p> <i>Task</i> <b>NUMBER ONE</b> </p>    
-            <img src="project/img/grayapple.png">
-                <img src="./img/blackapple.png"
+            <img src="project/img/grayapple.png" alt="Cерое яблоко">
+                <img src="./img/blackapple.png" alt="Черное яблоко">
 
 </body>
 </html>
