--- a/project/inner/index.html
+++ b/project/inner/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Task number one</h1>
         <p> <i>Task</i> <b>NUMBER ONE</b> </p>    
-            <img src="/img/grayapple.png" alt="Cерое яблоко">
+            <img src="project/img/grayapple.png" alt="Cерое яблоко">
                 <img src="../img/blackapple.png" alt="Черное яблоко">
 
 </body>
